--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,35 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.3.0'
-        classpath 'nu.studer:gradle-plugindev-plugin:1.0.4'
-        classpath 'org.codehaus.groovy:groovy-backports-compat23:2.4.6'
-        classpath 'net.researchgate:gradle-release:2.6.0'
-    }
-}
+//buildscript {
+//    ext.kotlin_version = '1.3.10'
+//    repositories {
+//        mavenLocal()
+//        jcenter()
+//    }
+//    dependencies {
+//        classpath 'org.codehaus.groovy:groovy-backports-compat23:2.4.6'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        classpath 'net.researchgate:gradle-release:2.7.1-SNAPSHOT'
+//    }
+//}
 
-apply plugin: 'groovy'
-apply plugin: 'idea'
-apply plugin: 'nu.studer.plugindev'
-apply plugin: 'com.jfrog.artifactory'
-apply plugin: 'net.researchgate.release'
+plugins {
+    id 'groovy'
+    id 'java-gradle-plugin'
+    id "com.jfrog.artifactory" version "4.8.1"
+    id "nu.studer.plugindev" version "1.0.6"
+    id "com.palantir.idea-test-fix" version "0.1.0"
+    id "nebula.kotlin" version "1.3.10"
+}
+//apply plugin: 'net.researchgate.release'
 
 group='net.researchgate'
 
 dependencies {
+//    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile("org.spockframework:spock-core:$spockVersion") { exclude group: 'org.codehaus.groovy' }
     testCompile "junit:junit:$junitVersion"
     testCompile "org.eclipse.jgit:org.eclipse.jgit:$jgitVersion"
     testCompile "cglib:cglib-nodep:$cglibVersion"
+    testImplementation gradleTestKit()
 }
 
 plugindev {
@@ -38,11 +45,11 @@ plugindev {
     done() // do not omit this
 }
 
-release {
-    git {
-        requireBranch = '(master|\\d+\\.\\d+)'
-    }
-}
+//release {
+//    git {
+//        requireBranch = '(master|\\d+\\.\\d+)'
+//    }
+//}
 
 bintray {
     user = project.hasProperty('bintrayUser') ? bintrayUser : ''
@@ -82,6 +89,20 @@ artifactory {
     }
 }
 
-afterReleaseBuild.dependsOn bintrayUpload
+//afterReleaseBuild.dependsOn bintrayUpload
 
 wrapper.gradleVersion = '1.12'
+
+repositories {
+    mavenCentral()
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
