Working implementation of kotlin task

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     testCompile "junit:junit:$junitVersion"
     testCompile "org.eclipse.jgit:org.eclipse.jgit:$jgitVersion"
     testCompile "cglib:cglib-nodep:$cglibVersion"
+    implementation 'net.researchgate:gradle-release:2.7.1-SNAPSHOT'
     testImplementation gradleTestKit()
 }
 
@@ -106,3 +107,16 @@ compileTestKotlin {
         jvmTarget = "1.8"
     }
 }
+sourceSets {
+    main.kotlin.srcDirs += 'src/main/groovy'
+    main.java.srcDirs += 'src/main/groovy'
+}
+//compileJava   {
+//    sourceCompatibility = '1.8'
+//    targetCompatibility = '1.8'
+//}
+
+compileGroovy.dependsOn.remove('compileJava')
+compileKotlin.dependsOn compileGroovy
+compileKotlin.classpath += files(compileGroovy.destinationDir)
+classes.dependsOn compileKotlin
