--- a/build.gradle
+++ b/build.gradle
@@ -110,8 +110,8 @@ compileTestKotlin {
     }
 }
 sourceSets {
-    main.kotlin.srcDirs += 'src/main/groovy'
-    main.java.srcDirs += 'src/main/groovy'
+//    main.kotlin.srcDirs += 'src/main/kotlin'
+//    main.java.srcDirs += 'src/main/groovy'
 }
 
 compileGroovy.dependsOn.remove('compileJava')
