--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,18 @@
-//buildscript {
-//    ext.kotlin_version = '1.3.10'
-//    repositories {
-//        mavenLocal()
-//        jcenter()
-//    }
-//    dependencies {
-//        classpath 'org.codehaus.groovy:groovy-backports-compat23:2.4.6'
-//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-//        classpath 'net.researchgate:gradle-release:2.7.1-SNAPSHOT'
-//    }
-//}
-
 plugins {
 //    id 'kotlin-dsl'
-    id "org.gradle.kotlin.kotlin-dsl" version "1.0.4"
+    id "org.gradle.kotlin.kotlin-dsl" version "1.0.5"
     id 'groovy'
     id 'java-gradle-plugin'
     id "com.jfrog.artifactory" version "4.8.1"
     id "nu.studer.plugindev" version "1.0.6"
     id "com.palantir.idea-test-fix" version "0.1.0"
-    id "nebula.kotlin" version "1.3.10"
+//    id "nebula.kotlin" version "1.3.11"
 }
 //apply plugin: 'net.researchgate.release'
 
 group='net.researchgate'
 
 dependencies {
-//    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile("org.spockframework:spock-core:$spockVersion") { exclude group: 'org.codehaus.groovy' }
     testCompile "junit:junit:$junitVersion"
     testCompile "org.eclipse.jgit:org.eclipse.jgit:$jgitVersion"
@@ -94,7 +80,7 @@ artifactory {
 
 //afterReleaseBuild.dependsOn bintrayUpload
 
-wrapper.gradleVersion = '1.12'
+//wrapper.gradleVersion = '5.0'
 
 repositories {
     mavenCentral()
