Change require branch to allow deploying 3.x branch

--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ gradlePlugin {
 
 release {
     git {
-        requireBranch = '(master|\\d+\\.\\d+)'
+        requireBranch = '(master|\\d+\\.\\d+|\\d+\\.+\\D)'
     }
 }
 
